* Removed unthrown exception declarations * Implemented reset * Fixed ShuntRequestHandler constructor declaration - remoteURL should be a URL, not a URI * Updated requestHandlers to include the maps they were created from - to support editing * RemovePath now removes specific path - so default REST stubs can be deleted without deleting the whole tree * getconfig now returns configuration as a map - to support editing and better description options * Updated swivelServer API to take callback inline - easier testing and more comfortable api * Added stub info button to tree - editStub hasn't been implemented